# CodeScanAI

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.e2e.yml  docker-compose.override.yml  docker-compose.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/alembic/: README  env.py  script.py.mako
apps/api/alembic/versions/: 20260430_000002_add_refresh_token_family_id.py  20260508_000006_cascade_scan_rows_on_file_delete.py
apps/api/app/: main.py
apps/api/app/core/: config.py  deps.py  exceptions.py  file_types.py  logging.py  rate_limit.py  security.py  uuid7.py
apps/api/app/models/: __init__.py  refresh_token.py  scan.py  scan_file.py  scan_finding.py  upload.py  user.py
apps/api/app/repositories/: file_repo.py  refresh_token_repo.py  scan_file_repo.py  scan_finding_repo.py  scan_repo.py  upload_repo.py  user_repo.py
apps/api/app/routers/: auth.py  health.py  scans.py  uploads.py
apps/api/app/schemas/: scan.py  upload.py
apps/api/app/services/: auth_service.py  celery_client.py  file_content_service.py  findings_service.py  scan_service.py  upload_service.py
apps/api/app/storage/: base.py  gcs.py  local.py
apps/api/tests/: conftest.py
apps/api/tests/integration/: test_auth.py  test_auth_refresh_logout.py  test_file_content.py  test_legacy_null_family.py  test_migrations.py  test_readyz.py  test_refresh_replay.py  test_request_logging.py  test_scans.py  test_uploads.py  test_uploads_tree.py
apps/api/tests/unit/: test_celery_client.py  test_config.py  test_csrf_dependency.py  test_file_types.py  test_jwt.py  test_logging.py  test_scan_file_repo.py  test_scan_finding_repo.py  test_scan_repo.py  test_storage_gcs.py  test_storage_local.py  test_upload_helpers.py
apps/worker/: Dockerfile  pyproject.toml
apps/worker/tests/: test_celery_app.py  test_classify_binary.py  test_classify_default_exclusions.py  test_cleanup.py  test_file_types_parity.py  test_llm_client.py  test_llm_mock_transport.py  test_logging.py  test_safety_caps.py  test_safety_nesting_depth.py  test_safety_path_traversal.py  test_safety_symlink.py  test_safety_zip_bomb.py  test_scanner_orchestrator.py  test_scanners_keywords.py  test_storage_gcs.py  test_storage_local.py
apps/worker/tests/integration/: test_cleanup.py  test_gemma_real.py  test_prepare_upload.py  test_run_scan.py
apps/worker/worker/: __init__.py  celery_app.py
apps/worker/worker/core/: config.py  db.py  logging.py  models.py  observability.py
apps/worker/worker/files/: classify.py  safety.py
apps/worker/worker/llm/: client.py  mock_transport.py  prompts.py  schemas.py
apps/worker/worker/llm/prompts/v1/: bugs.txt  security.txt
apps/worker/worker/scanners/: keywords.py
apps/worker/worker/storage/: __init__.py  gcs.py  local.py
apps/worker/worker/tasks/: cleanup.py  ping.py  prepare_upload.py  run_scan.py
codescan-backend/: .env.example  README.md  docker-compose.e2e.yml  docker-compose.override.yml  docker-compose.yml
codescan-backend/worker/: pyproject.toml
codescan-backend/worker/tests/: _zip_helpers.py  conftest.py  test_file_types_parity.py  test_llm_mock_transport.py  test_llm_prompts.py  test_llm_retry.py  test_logging.py  test_ping.py  test_safety_path_traversal.py  test_scanner_orchestrator.py  test_storage_factory.py  test_storage_gcs.py  test_storage_local.py
codescan-backend/worker/tests/integration/: test_cleanup.py  test_gemma_real.py
codescan-backend/worker/worker/: celery_app.py
codescan-backend/worker/worker/core/: file_types.py  logging.py  models.py  uuid7.py
codescan-backend/worker/worker/llm/: retry.py
codescan-backend/worker/worker/scanners/: __init__.py  base.py  bugs.py  security.py
codescan-backend/worker/worker/storage/: __init__.py  base.py  factory.py  gcs.py  local.py
codescan-backend/worker/worker/tasks/: cleanup.py  prepare_upload.py  run_scan.py
codescan-frontend/: .dockerignore  .env.example  .prettierignore  Dockerfile  README.md  docker-compose.e2e.yml  docker-compose.override.yml  docker-compose.yml  next.config.mjs  (+2 more)
(+242 files in other folders)
