[project]
name = "codescan-api"
version = "0.1.0"
description = "FastAPI service for CodeScan."
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
]

[dependency-groups]
dev = [
    "black==24.10.0",
    "httpx==0.28.1",
    "mypy==1.13.0",
    "pytest==8.3.4",
    "ruff==0.8.4",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "RET", "RUF", "S", "SIM", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
