[project]
name = "codescan-api"
version = "0.1.0"
description = "FastAPI service for CodeScan."
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic==1.14.1",
    "asyncpg==0.30.0",
    "bcrypt==4.2.1",
    "celery[redis]==5.4.0",
    "email-validator==2.2.0",
    "fastapi==0.115.6",
    "greenlet==3.1.1",
    "psycopg[binary]==3.2.3",
    "pydantic-settings==2.7.0",
    "pyjwt==2.10.1",
    "python-multipart==0.0.20",
    "sqlalchemy==2.0.36",
    "uvicorn[standard]==0.34.0",
]

[dependency-groups]
dev = [
    "black==24.10.0",
    "httpx==0.28.1",
    "mypy==1.13.0",
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "ruff==0.8.4",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "RET", "RUF", "S", "SIM", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = ["celery", "celery.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
